# accelerate-target-cmake

./: .gitmodules  .travis.yml  AccelerateTarget.cmake  CMakeLists.txt  DICTIONARY  README.md  appveyor.yml  biicode.conf  conanfile.py
test/: CMakeLists.txt  NoPCHOption.cmake  NoUnityBuildOption.cmake  PCHTargetsGeneratedAfterAcceleratingTarget.cmake  PCHTargetsGeneratedAfterCotireBootstrap.cmake  PrefixHeaderClearedOnTarget.cmake  SkipGeneratedFilesInPCHFile.cmake  UnityBuildTargetsDependOnUnityDependencies.cmake  UnityBuildTargetsDependOnUnityDependenciesVerify.cmake  UnityBuildTargetsGeneratedAfterCotireBootstrap.cmake  UnityBuildTargetsInheritDependencies.cmake  UnityBuildTargetsInheritDependenciesVerify.cmake  UnityBuildTargetsInheritTargetLinkLibraries.cmake  UseFilesInBuildDirectoryInPCHFile.cmake
